@startuml

title __FORMS's Class Diagram__\n

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        class com.example.fxjgit.forms.ProjectWindowController {
            + commitChangesListView : ListView<String>
            + commitMessageTextField : TextField
            + contentSplitPane : SplitPane
            + linesContainer : VBox
            + menuHbox : HBox
            ~ oddClick : boolean
            - commitButton : Button
            - diffListView : ListView<CheckBox>
            - fileListView : ListView<String>
            - filterTextField : TextField
            - git : Git
            - historyListView : ListView<String>
            - pullButton : Button
            - pushButton : Button
            - repository : Repository
            - rootPane : BorderPane
            - settingsButton : Button
            - tabPane : TabPane
            + addSelectedFilesToCommit()
            + allClicked()
            + commitButtonClicked()
            + getUser()
            + initialize()
            + setGit()
            + setUser()
            + updateScreen()
            - fillCommitChangesList()
            - loadChangesToListView()
            - loadCommitHistory()
            - loadDiffList()
            - onCommitButtonClicked()
            - onCommitChangesClicked()
            - onDiffListviewClicked()
            - onHistoryListviewClicked()
            - onPullButtonClicked()
            - onPushButtonClicked()
            - onSettingsButtonClicked()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        class com.example.fxjgit.forms.StartWindowController {
            + addExistingButton : Button
            + cloneButton : Button
            + createButton : Button
            + menuHbox : HBox
            + reloadButton : Button
            + repositoriesList : ListView
            ~ parentStage : Stage
            + StartWindowController()
            + initialize()
            + onCloneButtonClicked()
            + onCreateButtonClicked()
            + onExistingButtonClicked()
            + reloadRepositories()
            + setParentStage()
            + setUser()
            - nextScene()
            - setRepositoriesInInterface()
            - showPopupScene()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        class com.example.fxjgit.forms.ToolsMenuController {
            + Menu : AnchorPane
            + cloneRepoButton : MenuItem
            + deleteButton : MenuItem
            + discardButton : MenuItem
            + fetchButton : MenuItem
            + menuBar : MenuBar
            + newBranchButton : MenuItem
            + newRepoButton : MenuItem
            + openRepoButton : MenuItem
            + pullButton : MenuItem
            + pushButton : MenuItem
            + removeButton : MenuItem
            + renameButton : MenuItem
            + stashButton : MenuItem
            ~ git : Git
            + branchClicked()
            + cloneClicked()
            + deleteClicked()
            + discardClicked()
            + fetchClicked()
            + initialize()
            + newBranchClicked()
            + newRepoClicked()
            + onFetch()
            + onPull()
            + onPush()
            + openClicked()
            + pullClicked()
            + pushClicked()
            + removeClicked()
            + setGit()
            + stashClicked()
            + switchToBranchA()
            + switchToBranchB()
            + switchToBranchC()
        }
      }
    }
  }
  

  com.example.fxjgit.forms.ProjectWindowController .up.|> javafx.fxml.Initializable
  com.example.fxjgit.forms.ProjectWindowController o-- com.example.fxjgit.db.entities.User : user
  com.example.fxjgit.forms.ProjectWindowController o-- com.example.fxjgit.forms.ToolsMenuController : toolsMenuController
  com.example.fxjgit.forms.StartWindowController o-- com.example.fxjgit.db.entities.User : user
  com.example.fxjgit.forms.StartWindowController o-- com.example.fxjgit.forms.ToolsMenuController : toolsMenuController
  com.example.fxjgit.forms.ToolsMenuController .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
